--- a/demo/src/main/resources/application-dev.properties
+++ b/demo/src/main/resources/application-dev.properties
@@ -1,2 +1,12 @@
-# Dev toggles
-logging.level.org.springframework.security=INFO
+# Dev DB (override if needed)
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo_db
+spring.datasource.username=demo_user
+spring.datasource.password=demo_pass
+
+# Tell Spring which seed file to run
+spring.sql.init.data-locations=classpath:data-dev.sql
+
+# Optional: see SQL init logs
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+# application-dev.properties
+# spring.sql.init.mode=never
