--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=demo
 spring.docker.compose.enabled=false
 
+# DB defaults (can be overridden per profile)
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo_db
 spring.datasource.username=demo_user
 spring.datasource.password=demo_pass
+
+# JPA
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+
+# Make Spring run the SQL seed on startup
+spring.sql.init.mode=always
 
 # JWT
 app.jwt.secret=${APP_JWT_SECRET}
