--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,11 +1,11 @@
 FROM eclipse-temurin:17-jdk AS build
 WORKDIR /app
 COPY . .
-RUN chmod +x mvnw
-RUN ./mvnw -q -DskipTests package
+RUN chmod +x mvnw && ./mvnw -q -DskipTests clean package
 
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+# copy ONLY the bootable jar (matches artifactId)
+COPY --from=build /app/target/demo-*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app/app.jar"]
